--- a/result.html
+++ b/result.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="./image/iya.jpeg" alt="Hình ảnh kết quả" id="result-image"> <!-- Hình ảnh bạn muốn hiển thị ở trang này -->
+        <img src="./iya.jpeg" alt="Hình ảnh kết quả" id="result-image"> <!-- Hình ảnh bạn muốn hiển thị ở trang này -->
         <h1>残念ながら、私は恋人がいます</h1>
         <button class="answer" id="backhome">ホームページに戻る</button> <!-- Liên kết để quay lại trang chính -->
     </div>
